amend z-index of fixed header

--- a/src/App.css
+++ b/src/App.css
@@ -42,6 +42,7 @@ a:hover {
 
 header {
   position: fixed;
+  z-index: 100;
   width: 100%;
   top: 0;
   left: 0;
